--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -79,8 +79,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Asset\AssetController.cs" />
     <Compile Include="Asset\AssetPage.xaml.cs">
       <DependentUpon>AssetPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Asset\CreateAssetPage.xaml.cs">
+      <DependentUpon>CreateAssetPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dashboard\DashboardController.cs" />
     <Compile Include="Dashboard\DashboardPage.xaml.cs">
@@ -105,6 +109,10 @@
     <Page Include="Asset\AssetPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Asset\CreateAssetPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Dashboard\DashboardPage.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -161,6 +169,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Asset\no-image.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
