--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -67,7 +67,8 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="Velacro">
+    <Reference Include="Velacro, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>Velacro\Velacro.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
@@ -79,6 +80,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ReservationDetail\Model.cs" />
+    <Compile Include="ReservationDetail\ReservationDetailController.cs" />
+    <Compile Include="ReservationDetail\ReservationDetailPage.xaml.cs">
+      <DependentUpon>ReservationDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Reservation\Model.cs" />
+    <Compile Include="Reservation\ReservationController.cs" />
+    <Compile Include="Reservation\ReservationPage.xaml.cs">
+      <DependentUpon>ReservationPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="Login\LoginPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -99,6 +110,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ReservationDetail\ReservationDetailPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Reservation\ReservationPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
