add reservation feature through master

--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -98,6 +98,13 @@
     <Compile Include="Model\History.cs" />
     <Compile Include="Model\Reservation.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="ReservationDetail\Model.cs" />
+    <Compile Include="ReservationDetail\ReservationDetailController.cs" />
+    <Compile Include="ReservationDetail\ReservationDetailPage.xaml.cs">
+      <DependentUpon>ReservationDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Reservation\Model.cs" />
+    <Compile Include="Reservation\ReservationController.cs" />
     <Compile Include="Reservation\ReservationPage.xaml.cs">
       <DependentUpon>ReservationPage.xaml</DependentUpon>
     </Compile>
@@ -130,6 +137,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ReservationDetail\ReservationDetailPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Reservation\ReservationPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
