--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -199,6 +199,14 @@
   <ItemGroup>
     <Resource Include="Reservation\no-image.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Dashboard\[Re] D W  Dashboard – 1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Dashboard\clara_logo_1.png" />
+    <Resource Include="Dashboard\clara_logo_2.png" />
+    <Resource Include="Dashboard\line.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
