--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -197,10 +197,20 @@
     <Resource Include="Asset\no-image.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Login\undraw_responsive_6c8s.png" />
     <Resource Include="Reservation\no-image.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Dashboard\[Re] D W  Dashboard – 1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Login\clara_logo_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Dashboard\clara_logo_1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Dashboard\line.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
