--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -212,6 +212,12 @@
   <ItemGroup>
     <Resource Include="Dashboard\line.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Home\[Re] D W  Dashboard – 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Home\clara_logo_2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
