--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -228,6 +228,12 @@
   <ItemGroup>
     <Resource Include="Home\clara_logo_2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Reservation\clara_logo_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Reservation\Background Reservation.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
