--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -234,6 +234,9 @@
   <ItemGroup>
     <Resource Include="Reservation\Background Reservation.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Asset\[Re] D W  Dashboard – 2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
