--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -204,38 +204,34 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Asset\no-image.png" />
+    <Resource Include="Images\no-image.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Login\undraw_responsive_6c8s.png" />
-    <Resource Include="Reservation\no-image.png" />
+    <Resource Include="Images\undraw_responsive_6c8s.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Dashboard\[Re] D W  Dashboard – 1.png" />
+    <Resource Include="Images\[Re] D W  Dashboard – 1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Login\clara_logo_1.png" />
+    <Resource Include="Images\clara_logo_1.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Dashboard\clara_logo_1.png" />
+    <Resource Include="Images\line.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Dashboard\line.png" />
+    <Resource Include="Images\clara_logo_2.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Home\[Re] D W  Dashboard – 2.png" />
+    <Resource Include="Images\Background Reservation.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Home\clara_logo_2.png" />
+    <Resource Include="Images\[Re] D W  Dashboard – 2.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Reservation\clara_logo_2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Reservation\Background Reservation.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Asset\[Re] D W  Dashboard – 2.png" />
+    <Resource Include="Images\clara_icon.ico" />
+    <Resource Include="Images\logo.png" />
+    <Resource Include="Images\logo_icon.ico" />
+    <Resource Include="Images\logo_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
