--- a/CLARA-Desktop.csproj
+++ b/CLARA-Desktop.csproj
@@ -228,10 +228,12 @@
     <Resource Include="Images\[Re] D W  Dashboard – 2.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\clara_icon.ico" />
     <Resource Include="Images\logo.png" />
     <Resource Include="Images\logo_icon.ico" />
     <Resource Include="Images\logo_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\clara_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
